--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Com o spotaylor, você pode ouvir os singles antecipadamente, sem anúncios e concorrer a brindes semanais!</h1>
-<img src=""
+<img src="./img/spotify.jpg">
 </body>
 </html>
